Emacs client and adding several Linux docs

--- a/emacs.org
+++ b/emacs.org
@@ -1539,7 +1539,12 @@ Just some changes to make it feel more like the other modes.
 
 ** Default and time switches
 #+begin_src emacs-lisp
-   (jmn-load-gruvbox-dark-hard)
+  ;; default for in terminal (with transparency)
+  (set-face-background 'org-block "grey2") ;; helpful for no theme
+
+  ;; (jmn-load-gruvbox-dark-hard)  ;; goat
+  ;; (load-theme 'doom-gruvbox)    ;; cleaner but more cartoonish
+
 #+end_src
 
 * Hacky Fixes
