--- a/linuxSetupDocs/gnome_extensions.org
+++ b/linuxSetupDocs/gnome_extensions.org
@@ -3,6 +3,10 @@
 documenting extensions
 - for now just the ones which do not have gnome 44 (fedora 38) versions
 
+
+* Vitals
+Shows system info in top bar
+
 * ddterm
 some form of drop down terminal is useful
 - =`= is  activation key
