--- a/linuxSetupDocs/ssh.org
+++ b/linuxSetupDocs/ssh.org
@@ -28,6 +28,9 @@ Also, add "Other Locations" to nautilus with ssh://<userName@dsk.
 
 If you have both #1 and #2 in place but are missing #3, then you'll end up with an empty DISPLAY environment variable.
 
+*NOTE: If I am logged in on remote machine, gui will open there and  not be forwarded*
+- _Log out of remote machine!_
+
 ** Soup-to-nuts, here is how to get X11 forwarding working:
 
 On your server, make sure /etc/ssh/sshd_config contains:
