Cleaned up emacs docs

--- a/emacs.org
+++ b/emacs.org
@@ -1115,7 +1115,7 @@ The following removes the prompts when loading the buffer with the local variabl
 #+begin_src emacs-lisp
   (add-to-list 'safe-local-variable-values '(eval jmn-export-to-html-on-save))
 
-  ;;(add-to-list 'org-safe-remote-resources "\\`https://fniessen\\.github\\.io/org-html-themes/org/theme-readtheorg\\.setup\\'")
+  (add-to-list 'org-safe-remote-resources "\\`https://fniessen\\.github\\.io/org-html-themes/org/theme-readtheorg\\.setup\\'")
 #+end_src
 
 * Agenda/GTD
@@ -1540,11 +1540,12 @@ Just some changes to make it feel more like the other modes.
 ** Default and time switches
 #+begin_src emacs-lisp
   ;; default for in terminal (with transparency)
-  (set-face-background 'org-block "grey2") ;; helpful for no theme
-
-  ;; (jmn-load-gruvbox-dark-hard)  ;; goat
+  ;; (set-face-background 'org-block "grey9") ;; helpful for no theme
+  ;; gruvbox backup
   ;; (load-theme 'doom-gruvbox)    ;; cleaner but more cartoonish
 
+  (jmn-load-gruvbox-dark-hard)  ;; goat
+  (transparency 85)
 #+end_src
 
 * Hacky Fixes
