--- a/linuxSetupDocs/dropbox_service.org
+++ b/linuxSetupDocs/dropbox_service.org
@@ -1,5 +1,5 @@
 #+TITLE: Dropbox as a systemd service
-#+STARTUP: showall
+#+date: 2023:June:16
 
 Source: https://www.bbkane.com/blog/dropbox-as-a-systemd-service/
 
