--- a/linuxSetupDocs/fedora_setup_checkbox.org
+++ b/linuxSetupDocs/fedora_setup_checkbox.org
@@ -1,4 +1,4 @@
-#+TITLE: Loose Notes of Tasks After Linux Install
+#+TITLE: Loose Notes of Tasks After Fedora Install
 #+STARTUP: showall
 
 Larger tasks are covered by their own documents in this same directory.
