--- a/linuxSetupDocs/gnome.org
+++ b/linuxSetupDocs/gnome.org
@@ -1,11 +1,9 @@
-#+TITLE: Reduce Gnome 3.2 Window Topbar Height
-#+STARTUP: showall
+#+title: Gnome Docs
 
-Source: https://ogbe.net/blog/gnome_titles
-
-# Last used for Fedora 37
-
-* Tangle the following and log out.
+* Reduce Gnome 3.2 Window Topbar Height
+- Source: https://ogbe.net/blog/gnome_titles
+- Last used for Fedora 37
+** Tangle the following and log out.
 Write the following in =~/.config/gtk-3.0/gtk.css=
 #+begin_src js :tangle ~/.config/gtk-3.0/gtk.css :mkdirp yes
   /* shrink headerbars (don't forget semicolons after each property) */
@@ -49,10 +47,26 @@ Write the following in =~/.config/gtk-3.0/gtk.css=
   }
 #+end_src
 
-
-* Make topbar dark
+** Make topbar dark
 Place the following in =~/.config/gtk-3.0/settings.ini=
 #+begin_src js :tangle ~/.config/gtk-3.0/settings.ini  :mkdirp yes
 [Settings]
 gtk-application-prefer-dark-theme=1
 #+end_src
+
+
+
+* Extensions
+documenting extensions
+- for now just the ones which do not have gnome 44 (fedora 38) versions
+
+** Vitals
+Shows system info in top bar
+
+** ddterm
+some form of drop down terminal is useful
+- =`= is  activation key
+   - though this does become an issue for bash and markdown
+
+** Hide top bar
+- for extra real estate
