--- a/linuxSetupDocs/linux.org
+++ b/linuxSetupDocs/linux.org
@@ -1,4 +1,7 @@
-* tmp
+#+TITLE: Linux Docs
+#+STARTUP: showall
+
+* tmp directory
 ** Increase size of tmp
 #+begin_src shell
   mount -o remount,size=5G /tmp/
