--- a/emacs.org
+++ b/emacs.org
@@ -1336,6 +1336,9 @@ Faster terminal due to being compiled. Default is a better mode than term-mode; 
 - For more than one terminal, you must M-x rename-uniquely the terminal.
 - C-c prefix for term commands
 - C-c C-c = send C-c to the terminal (kill running command)
+*** Extra installs needed
+- cmake
+- libtool
 
 #+begin_src emacs-lisp
   (use-package vterm
@@ -1544,7 +1547,8 @@ Just some changes to make it feel more like the other modes.
   (set-face-background 'org-block "grey9") ;; helpful for no theme
   ;; gruvbox backup
   ;; (load-theme 'doom-gruvbox)    ;; cleaner but more cartoonish
-  (jmn-load-gruvbox-dark-hard)  ;; goat
+  ;; (jmn-load-gruvbox-dark-hard)  ;; goat
+   (load-theme 'modus-vivendi)    ;;native
   (transparency 85)
 #+end_src
 
