--- a/linuxSetupDocs/emacs_setup.org
+++ b/linuxSetupDocs/emacs_setup.org
@@ -30,6 +30,7 @@ sudo dnf install -y libtree-sitter-devel
   git clone https://github.com/emacs-mirror/emacs.git
   cd emacs
   #checkout desired  tag/master/commit/etc.
+  ./autogen.sh
   ./configure --with-native-compilation --with-pgtk  --with-json --with-tree-sitter
   make -j4
   sudo make install
