--- a/linuxSetupDocs/syncthing.org
+++ b/linuxSetupDocs/syncthing.org
@@ -6,6 +6,8 @@
   firefox http://127.0.0.1:8384/
 #+end_src
 
+** For speedup, uncheck "Relay's Enabled"
+Found by clicking Actions in the upper right, Actions, Advanced, Options.
 
 * Autostart
 Added =syncthing-start.desktop= from Syncthing's github to =~/.config/autostart=.
