--- a/README.org
+++ b/README.org
@@ -1,8 +1,8 @@
 #+TITLE: Hack Configuration
 
-Be it known, here lies my computational castle which mostly consists of an [[https://raw.githack.com/JohnNehls/.dotfiles/master/emacs.html][Emacs configuration]] and some sparse [[./linuxSetupDocs][Linux notes]], all written in the /literate programming/ style via Org-Babel in the emacs.org file.
+Be it known, here lies my computational castle which mostly consists of an [[https://raw.githack.com/JohnNehls/dotfiles/master/emacs.html][Emacs configuration]] and some sparse [[./linuxSetupDocs][Linux notes]], all written in the /literate programming/ style via Org-Babel in the emacs.org file.
 
-For a more thorough Emacs configuration see [[https://github.com/daviwil/emacs-from-scratch]].
+For a more thorough Emacs configuration see [[https://github.com/daviwil/emacs-from-scratch][emacs-from-scratch]].
 
 * Installation
 Execute the following commands starting wherever you'd like to place this repo:
