--- a/linuxSetupDocs/fedora_setup_checkbox.org
+++ b/linuxSetupDocs/fedora_setup_checkbox.org
@@ -23,9 +23,8 @@ setup the daemon (other thread)
    - make Caps additional Ctrl
 
 * Install stow
-
-* Deathwish's copr emacs-pgtk-nativecomp for emacs 29
-As of <2023-03-11 Sat>
+* Install Emacs from source
+[[file:emacs_setup.org::*Building Emacs from Source][Building Emacs from Source]]
 
 * Set keyboard shortcuts
 ** Navigation
@@ -37,20 +36,32 @@ As of <2023-03-11 Sat>
 - have to do this because gnome does not have 150% scaling option
 
 * python
+
 #+begin_src shell
-supo dnf install python3 python3-numpy python3-scipy python3-matplotlib python3-pandas ipython
+sudo dnf install -y  python3 python3-numpy python3-scipy python3-matplotlib python3-pandas ipython
 #+end_src
 
 * install rmpfusion free
 https://docs.fedoraproject.org/en-US/quick-docs/setup_rpmfusion/
 - then install vlc
 
-* Change gnome-terminal settings
-- Colors to solarized
+* gnome-terminal settings
+- Colors to solarized?
 
 * Install VSCode
-
-* git tokens/credentials
+* Git install
+Use Github's CLI:
 #+begin_src shell
-git config credential.helper store
+  sudo dnf install -h gh
+  gh auth login
 #+end_src
+
+* Codecs For Streaming Videos
+source: https://fedoraproject.org/wiki/OpenH264
+#+begin_src shell
+  sudo dnf config-manager --set-enabled fedora-cisco-openh264
+  sudo dnf install -y gstreamer1-plugin-openh264 mozilla-openh264
+#+end_src
+Other possible installs:
+- ffmpeg
+- libav
