--- a/linuxSetupDocs/syncAndBackup.org
+++ b/linuxSetupDocs/syncAndBackup.org
@@ -26,7 +26,7 @@ sudo dnf install syncthing
 *** For speedup, uncheck "Relay's Enabled"
 Found by clicking Actions in the upper right, Actions, Advanced, Options.
 
-** Autostart
+** autostart
 Can either:
 1) ad =syncthing-start.desktop= from Syncthing's github to =~/.config/autostart=.
 2) just add to startup applications via =Tweaks=. Both  do the _SAME_ thing-- do this!
