--- a/emacs.org
+++ b/emacs.org
@@ -1449,7 +1449,7 @@ Just some changes to make it feel more like the other modes.
     (set-face-background 'line-number
                          (face-attribute 'default :background))
 
-     (set-face-foreground 'default "gray75") ;; default "#ebdbb2"
+    (set-face-foreground 'default "gray75") ;; default "#ebdbb2"
     (set-face-foreground 'default "moccasin") ;; default "#ebdbb2"
 
       (jmn-set-gruv-org-faces '((done-color . "gray35" ))))
@@ -1461,7 +1461,7 @@ Just some changes to make it feel more like the other modes.
     (disable-theme (car custom-enabled-themes))
     (load-theme 'gruvbox-dark-hard t)
 
-    (set-face-background 'default "gray1") ;; black shows up blue in term
+    (set-face-background 'default "black") ;; black shows up blue in term
     (set-face-foreground 'default "bisque2") ;; default "#ebdbb2"
 
     (set-face-background 'mode-line-inactive "gray12") ;; default "#ebdbb2"
@@ -1590,7 +1590,9 @@ source: https://github.com/syl20bnr/spacemacs/issues/7262
 #+begin_src emacs-lisp
   (defun on-after-init ()
     (unless (display-graphic-p (selected-frame))
-      (set-face-background 'default "unspecified-bg" (selected-frame))))
+      (set-face-background 'default "unspecified-bg" (selected-frame)))
+    (set-face-background 'line-number
+                         (face-attribute 'default :background)))
 
   (add-hook 'window-setup-hook 'on-after-init)
 #+end_src
