Improve syncAndBackup, increase emacs transparency

--- a/emacs.org
+++ b/emacs.org
@@ -1552,14 +1552,9 @@ Just some changes to make it feel more like the other modes.
 
 ** Default and time switches
 #+begin_src emacs-lisp
-  ;;;;; default for in terminal (with transparency) ;;;;;
-  ;; (load-theme 'modus-vivendi)    ;;native
-  ;; (set-face-background 'org-block "grey6") ;; helpful for no theme
-  ;; (transparency 85)
-
-  ;; ;; gruvbox goat backup
+  ;; gruvbox goat
   (jmn-load-gruvbox-dark-hard)
-  (transparency 85)
+  (transparency 83)
 #+end_src
 
 * Hacky Fixes
