--- a/emacs.org
+++ b/emacs.org
@@ -1449,7 +1449,7 @@ Just some changes to make it feel more like the other modes.
     (set-face-background 'line-number
                          (face-attribute 'default :background))
 
-    (set-face-foreground 'default "gray75") ;; default "#ebdbb2"
+    ;; (set-face-foreground 'default "gray75") ;; default "#ebdbb2"
     (set-face-foreground 'default "moccasin") ;; default "#ebdbb2"
 
       (jmn-set-gruv-org-faces '((done-color . "gray35" ))))
@@ -1461,11 +1461,11 @@ Just some changes to make it feel more like the other modes.
     (disable-theme (car custom-enabled-themes))
     (load-theme 'gruvbox-dark-hard t)
 
-    (set-face-background 'default "black") ;; black shows up blue in term
+    ;; (set-face-background 'default "black") ;; black shows up blue in term
     (set-face-foreground 'default "bisque2") ;; default "#ebdbb2"
 
-    (set-face-background 'mode-line-inactive "gray12") ;; default "#ebdbb2"
-    (set-face-background 'mode-line-active   "gray30") ;; default "#ebdbb2"
+    (set-face-background 'mode-line-inactive "black")
+    (set-face-background 'mode-line-active   "gray30")
 
     (set-face-background 'line-number
                          (face-attribute 'default :background))
@@ -1554,7 +1554,7 @@ Just some changes to make it feel more like the other modes.
 #+begin_src emacs-lisp
   ;; gruvbox goat
   (jmn-load-gruvbox-dark-hard)
-  (transparency 83)
+  (transparency 95)
 #+end_src
 
 * Hacky Fixes
