Utilize --dotfiles flag with stow

--- a/README.org
+++ b/README.org
@@ -7,13 +7,13 @@ For a more thorough Emacs configuration see [[https://github.com/daviwil/emacs-f
 * Installation
 Execute the following commands starting wherever you'd like to place this repo:
 #+begin_src bash
-  git clone https://github.com/JohnNehls/.dotfiles
-  cd .dotfiles
+  git clone https://github.com/JohnNehls/dotfiles
+  cd dotfiles
 #+end_src
 
 For the next step, there may be issues if our home directory already contains versions of configuration files we are now cloning-- rename or delete these files if we'd like them replaced. Then execute:
 #+begin_src bash
-stow . -t ~
+stow --dotfiles .
 #+end_src
 
 Here [[https://www.gnu.org/software/stow/][stow]] makes "symlinks" into the parent directory (here the home directory). Before creating the "symlinks", stow checks its =.stow-local-ignore= to find which files to ignore.
